# lewm_dino_encoder_comparison

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  setup.sh
conf/experiment/: dinov3.yaml  lewm.yaml
docs/: platform_api.md
scripts/train/: VENDORED.md
scripts/train/config/: prejepa.yaml
src/: dino_patch.py  interfaces.py
tests/: test_interfaces_import.py
