[project]
name = "lewm-dino-encoder-comparison"
version = "0.0.0"
description = "Inference-optimization (PyTorch->ONNX->TensorRT) & QLoRA study over stable-worldmodel's LeWM vs DINOv3-WM"
requires-python = ">=3.10"

# The owned dependency layer only. Torch AND TensorRT are intentionally ABSENT:
# they are provided by the NGC PyTorch base image (a CUDA-matched, tuned build).
# Listing `tensorrt` here would let pip pull a conflicting libnvinfer/CUDA stack;
# listing `torch` would let uv shadow the NGC build. See the Dockerfile.
dependencies = [
    "stable-worldmodel",
    "stable-pretraining",
    "hydra-core",
    "wandb",
    "jaxtyping",
    "beartype",
    "onnx",
    "transformers",
    "timm",
    "peft",
    "bitsandbytes",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
# Run modules/tests from the repo root (`python -m src.*`, `from src import ...`).
pythonpath = ["."]

# Exact pins live in uv.lock, which is generated IN-CONTAINER (`uv lock`) against
# the NGC environment so torch/TensorRT resolve to the bundled builds. It is not
# generated on the editing host, where those builds are absent.
