[project]
name = "lewm-dino-encoder-comparison"
version = "0.0.0"
description = "Inference-optimization (PyTorch->ONNX->TensorRT) & QLoRA study over stable-worldmodel's LeWM vs DINOv3-WM"
requires-python = ">=3.10"

# The owned dependency layer, uv-managed. torch is pinned to the CUDA 12.4 (cu124)
# wheel index to match the RunPod pod's CUDA 12.4. TensorRT is intentionally ABSENT:
# it is installed by setup.sh (cu12, CUDA-12.4-compatible) on pod start and kept out
# of the lock so it can't pull a conflicting libnvinfer/CUDA stack.
dependencies = [
    "torch",
    "stable-worldmodel",
    "stable-pretraining",
    "hydra-core",
    "wandb",
    "jaxtyping",
    "beartype",
    "onnx",
    "transformers",
    "timm",
    "peft",
    "bitsandbytes",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
# Not an installable package; run modules via `uv run python -m src.<...>`.
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

# torch from the CUDA 12.4 wheel index (matches RunPod's CUDA 12.4).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
# Run modules/tests from the repo root (`python -m src.*`, `from src import ...`).
pythonpath = ["."]
